# general-scraper

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  result.json  sitemap.json
.github/workflows/: rust.yml
examples/f1_data/: access_log.json  input.json  output.json  skip_urls.json
examples/techcrunch/: access_log.json  input.json  output.json
migrations/2020-08-01-061837_initial/: down.sql  up.sql
src/: lib.rs  main.rs
src/crawler/: mod.rs  test.rs
src/crawler/formatter/: mod.rs  test.rs
src/crawler/selector_node/: mod.rs  test.rs
src/dispatcher/: job.rs  mod.rs
src/dispatcher/datastore/: mod.rs  models.rs  schema.rs
src/entity/: mod.rs
src/executor/: mod.rs  test.rs
src/formatter/: mod.rs  test.rs
src/selector_node/: mod.rs  test.rs
src/selector_tree/: mod.rs  test.rs
