[package]
name = "scrapper"
version = "0.1.0"
authors = ["Riku Inoue <gety0urpingdrum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12"
reqwest = { version = "0.11", features = ["gzip", "brotli"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"]}
rayon = "1.5"
sha-1 = "0.9"
futures = "0.3"
diesel = { version = "1.4", features = ["sqlite", "postgres", "chrono", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.15"
log = "0.4"
env_logger = "0.8"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "cmd"
path = "src/bin/cmd.rs"
